src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .button {
        @apply p-2 mr-4 inline-flex px-3 py-2 rounded bg-gray-100 hover:bg-gray-200 dark:hover:bg-zinc-800 dark:bg-zinc-900 dark:text-white font-semibold duration-300 transition-colors
    }

    .button-main {
        @apply button bg-white hover:bg-gray-100 dark:bg-zinc-950
    }

    .title {
        @apply text-2xl text-black dark:text-gray-100 sm:text-4xl font-bold text-center mb-4
    }

    .paragraph {
        @apply dark:text-gray-100 mb-3 leading-relaxed
    }
}

.preview {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 3; /* number of lines to show */
            line-clamp: 3; 
    -webkit-box-orient: vertical;
}

